--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
       href="./src//assets/logo/manasoft.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manasoft</title>
+    <!-- Page Title -->
+    <title>
+      Manasoft - Biznes uchun IT yechimlar | Telegram botlar, veb saytlar, mobil
+      ilovalar
+    </title>
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Manasoft - biznesingiz uchun zamonaviy IT yechimlar: Telegram botlar, veb saytlar, web platformalar va mobil ilovalar yaratish xizmatlari. Ishonchli, tezkor va professional yondashuv."
+    />
+
+    <!-- Meta Keywords -->
+    <meta
+      name="keywords"
+      content="Manasoft, IT yechimlar, Telegram bot, veb sayt, web platforma, mobil ilova, app yaratish, biznes uchun IT, O'zbekcha IT xizmatlar, bot yasash, sayt tayyorlash, web ilovalar"
+    />
+
+    <!-- Open Graph for better social media visibility -->
+    <meta property="og:title" content="Manasoft - Biznes uchun IT yechimlar" />
+    <meta
+      property="og:description"
+      content="Telegram botlar, veb saytlar, web platformalar va mobil ilovalar yaratish xizmatlari. Ishonchli va tezkor IT yechimlar."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://manasoft.uz" />
+    <!-- o'zingizning sayt manzilingizni qo'ying -->
+    <meta property="og:image" content="https://manasoft.uz" />
+    <!-- sayt preview rasmi -->
+
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Manasoft - Biznes uchun IT yechimlar" />
+    <meta
+      name="twitter:description"
+      content="Telegram botlar, veb saytlar, web platformalar va mobil ilovalar yaratish xizmatlari."
+    />
+    <meta name="twitter:image" content="https://manasoft.uz" />
+
+    <!-- Robots meta for indexing -->
+    <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
