--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Page Title -->
+    <meta
+      name="google-site-verification"
+      content="1xQ1s-xWWha0SrnPcfxO7Ym79rzTkkM2xYTxBndDKEc"
+    />
     <title>
       Manasoft - Biznes uchun IT yechimlar | Telegram botlar, veb saytlar, mobil
       ilovalar
@@ -36,7 +40,6 @@
     <!-- o'zingizning sayt manzilingizni qo'ying -->
     <meta property="og:image" content="https://manasoft.uz" />
     <!-- sayt preview rasmi -->
-
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Manasoft - Biznes uchun IT yechimlar" />
